# hermes

./: README.md  hermes.kdev4  makefile  pyproject.toml  ruff_output.txt
.kdev4/: hermes.kdev4
backup/: bulk_builders.py  dashboard.py  database_crud_old.py  test_paths.py  unit_of_work.py
dashboard/: main.py
docs/: docs.md
prompts/: clean_descriptions.txt  configure_and_report.txt  glm.txt  super_clean_descriptions.txt
scripts/: api_dashboard.py  hermes_database_precios_claros_insert.py  hermes_scrape_precios_claros_clean_descriptions.py  hermes_scrape_precios_claros_inspect.py  hermes_scrape_precios_claros_query_descriptions.py  hermes_scrape_precios_claros_start.py  hermes_scrape_precios_claros_to_database.py  hermes_scrape_precios_claros_update.py  populate_tag_dictionary.py
src/: events_from_directories_and_files.py  events_from_sample.py  events_from_storage.py  helpers.py  metadata.py  testing.py  tools.py  tree_store.py
src/hermes/config/: base.yaml  default.yaml  development.yaml  production.yaml  testing.yaml
src/hermes/core/: action.py  branches.py  cleaning_by_context.py  cli.py  config.py  constants.py  crontab.py  formatter.py  helpers.py  infra.py  message_board_client.py  metadata.py  parameters.py  rows_io.py  rows_iterator.py  rows_processor.py  rows_reader.py  rows_selector.py  rows_writer.py  search_table.py  services.py  (+6 more)
tests/: test_core_utilities.py  test_data_processor.py  test_database_from_sample.py  test_database_repository.py  test_sample_builder.py  test_scrape_precios_claros.py  test_scraper.py  test_tagging_action.py
(+39 files in other folders)
