[project]
name = "hermes"
version = "0.1.0"
description = "System for downloading, processing, and analyzing supermarket prices from Argentina."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.121.1",
    "isort>=7.0.0",
    "markdown>=3.10",
    "pandas>=2.3.3",
    "pydrive>=1.3.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
    "thefuzz>=0.22.1",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
